--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,11 @@
-sudo: required
+sudo: false
 language: python
 
-services:
-  - docker
-
-env:
-  - DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
-
-install:
-  - docker pull $DOCKER_IMAGE
+addons:
+  apt:
+    packages:
+      - curl
 
 script:
-  - docker run --rm -v `pwd`:/pypy-wheels $DOCKER_IMAGE /pypy-wheels/build.sh
+  - ./build.sh
 
