split the image into two: a base one (which change less often) and a derived one, to save build time

--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -1,7 +1,8 @@
+# copied from pypa/manylinux, but based on centos6 instead of centos5
+
 FROM centos:centos6
 LABEL maintainer="anto.cuni@gmail.com"
 
-# copied from pypa/manylinux
 ENV LC_ALL en_US.UTF-8
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US.UTF-8
@@ -13,16 +14,3 @@ COPY build_scripts /build_scripts
 RUN bash build_scripts/build.sh && rm -r build_scripts
 
 ENV SSL_CERT_FILE=/opt/_internal/certs.pem
-
-# pypy-wheels specific stuff
-#
-# uncomment this to avoid downloading pypy again and again
-#COPY pypy-5.8-1-linux_x86_64-portable.tar.bz2 /tmp/
-ADD install_pypy.sh /tmp
-RUN /tmp/install_pypy.sh
-ENV PATH="/opt/pypy/bin:${PATH}"
-
-ADD install_packages.sh /tmp
-RUN /tmp/install_packages.sh
-
-
