--- a/docker/image/Dockerfile
+++ b/docker/image/Dockerfile
@@ -1,6 +1,9 @@
-ARG basetag
-FROM antocuni/pypy-wheels-base:$basetag
+ARG baseimage
+FROM $baseimage
 LABEL maintainer="anto.cuni@gmail.com"
+
+ADD install_packages.sh /tmp
+RUN /tmp/install_packages.sh
 
 # uncomment this to avoid downloading pypy again and again
 #COPY pypy-5.8-1-linux_x86_64-portable.tar.bz2 /tmp/
@@ -8,5 +11,3 @@ ADD install_pypy.sh /tmp
 RUN /tmp/install_pypy.sh
 ENV PATH="/opt/pypy/bin:${PATH}"
 
-ADD install_packages.sh /tmp
-RUN /tmp/install_packages.sh
