--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 
 install:
   - docker --version
-  - docker login -u antocuni -p $DOCKERPASS
+  - docker login -u pypywheels -p $DOCKERPASS
   - ./docker/build_image.sh
 
 script:
