move all the scripts to their own dir

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ install:
   - ./docker/build_image.sh
 
 script:
-  - ./run.sh
+  - ./scripts/run.sh
 
 after_script:
-  - ./clone-gh-pages.sh
-  - python build_index.py wheelhouse/ubuntu/ /tmp/gh-pages/ubuntu
-  - ./commit-gh-pages.sh
+  - ./scripts/clone-gh-pages.sh
+  - python scripts/build_index.py wheelhouse/ubuntu/ /tmp/gh-pages/ubuntu
+  - ./scripts/commit-gh-pages.sh
