--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
 
 
 before_install:
-  - [ -n "$encrypted_9edd802e88c8_key" ] && openssl aes-256-cbc -K $encrypted_9edd802e88c8_key -iv $encrypted_9edd802e88c8_iv -in ./travis/travis.rsa.enc -out ./travis/travis.rsa -d
+  - test -n "$encrypted_9edd802e88c8_key" && openssl aes-256-cbc -K $encrypted_9edd802e88c8_key -iv $encrypted_9edd802e88c8_iv -in ./travis/travis.rsa.enc -out ./travis/travis.rsa -d"
 
 install:
   - docker --version
