build wheels for gevent

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,13 +61,13 @@ env:
   - PYPY="7.0.0" PY="3.6" PKG="cython"
   - PYPY="7.1.1" PY="2.7" PKG="cython"
   - PYPY="7.1.1" PY="3.6" PKG="cython"
-  - PYPY="6.0.0" PY="2.7" PKG="cryptography netifaces psutil"
-  - PYPY="6.0.0" PY="3.5" PKG="cryptography netifaces psutil"
-  - PYPY="7.0.0" PY="2.7" PKG="cryptography netifaces psutil"
-  - PYPY="7.0.0" PY="3.5" PKG="cryptography netifaces psutil"
-  - PYPY="7.0.0" PY="3.6" PKG="cryptography netifaces psutil"
-  - PYPY="7.1.1" PY="2.7" PKG="cryptography netifaces psutil"
-  - PYPY="7.1.1" PY="3.6" PKG="cryptography netifaces psutil"
+  - PYPY="6.0.0" PY="2.7" PKG="cryptography netifaces psutil gevent"
+  - PYPY="6.0.0" PY="3.5" PKG="cryptography netifaces psutil gevent"
+  - PYPY="7.0.0" PY="2.7" PKG="cryptography netifaces psutil gevent"
+  - PYPY="7.0.0" PY="3.5" PKG="cryptography netifaces psutil gevent"
+  - PYPY="7.0.0" PY="3.6" PKG="cryptography netifaces psutil gevent"
+  - PYPY="7.1.1" PY="2.7" PKG="cryptography netifaces psutil gevent"
+  - PYPY="7.1.1" PY="3.6" PKG="cryptography netifaces psutil gevent"
   - PYPY="7.0.0" PY="2.7" PKG="scipy"
   - PYPY="7.0.0" PY="3.5" PKG="scipy"
   - PYPY="7.0.0" PY="3.6" PKG="scipy"
