--- a/.travis.yml
+++ b/.travis.yml
@@ -73,6 +73,11 @@ env:
   - PYPY="7.0.0" PY="3.6" PKG="pandas"
   - PYPY="7.1.1" PY="2.7" PKG="pandas"
   - PYPY="7.1.1" PY="3.6" PKG="pandas"
+  - PYPY="7.0.0" PY="2.7" PKG="xgboost"
+  - PYPY="7.0.0" PY="3.5" PKG="xgboost"
+  - PYPY="7.0.0" PY="3.6" PKG="xgboost"
+  - PYPY="7.1.1" PY="2.7" PKG="xgboost"
+  - PYPY="7.1.1" PY="3.6" PKG="xgboost"
   - PYPY="7.1.1" PY="2.7" PKG="numpy==1.14.3"
   - PYPY="7.1.1" PY="2.7" PKG="pandas==0.20.3"
   - PYPY="7.1.1" PY="2.7" PKG="scipy==1.1.0"
