this is the correct spelling

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,5 +2,5 @@ FROM pypywheels/manylinux2010-pypy_x86_64
 LABEL maintainer="anto.cuni@gmail.com"
 
 # this is needed for numpy and scipy
-RUN yum install -y libopenblas-dev
+RUN yum install -y openblas-devel
 
