temporarily remove most of the packages to build, to speed up testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,50 +47,7 @@ script:
 
 
 env:
-  - PYPY="7.0.0" PY="2.7" PKG="numpy"
-  - PYPY="7.0.0" PY="3.5" PKG="numpy"
-  - PYPY="7.0.0" PY="3.6" PKG="numpy"
-  - PYPY="7.1.1" PY="2.7" PKG="numpy"
-  - PYPY="7.1.1" PY="3.6" PKG="numpy"
-  - PYPY="7.2.0" PY="2.7" PKG="numpy"
-  - PYPY="7.2.0" PY="3.6" PKG="numpy"
-  - PYPY="7.0.0" PY="2.7" PKG="scipy"
-  - PYPY="7.0.0" PY="3.5" PKG="scipy"
-  - PYPY="7.0.0" PY="3.6" PKG="scipy"
-  - PYPY="7.1.1" PY="2.7" PKG="scipy"
-  - PYPY="7.1.1" PY="3.6" PKG="scipy"
-  - PYPY="7.2.0" PY="2.7" PKG="scipy"
-  - PYPY="7.2.0" PY="3.6" PKG="scipy"
-  - PYPY="7.0.0" PY="2.7" PKG="cython"
-  - PYPY="7.0.0" PY="3.5" PKG="cython"
-  - PYPY="7.0.0" PY="3.6" PKG="cython"
-  - PYPY="7.1.1" PY="2.7" PKG="cython"
-  - PYPY="7.1.1" PY="3.6" PKG="cython"
-  - PYPY="7.2.0" PY="2.7" PKG="cython"
-  - PYPY="7.2.0" PY="3.6" PKG="cython"
-  - PYPY="7.0.0" PY="2.7" PKG="cryptography netifaces psutil gevent"
-  - PYPY="7.0.0" PY="3.5" PKG="cryptography netifaces psutil gevent"
-  - PYPY="7.0.0" PY="3.6" PKG="cryptography netifaces psutil gevent"
-  - PYPY="7.1.1" PY="2.7" PKG="cryptography netifaces psutil gevent"
-  - PYPY="7.1.1" PY="3.6" PKG="cryptography netifaces psutil gevent"
-  - PYPY="7.2.0" PY="2.7" PKG="cryptography netifaces psutil gevent"
-  - PYPY="7.2.0" PY="3.6" PKG="cryptography netifaces psutil gevent"
-  - PYPY="7.0.0" PY="2.7" PKG="pandas"
-  - PYPY="7.0.0" PY="3.5" PKG="pandas"
-  - PYPY="7.0.0" PY="3.6" PKG="pandas"
-  - PYPY="7.1.1" PY="2.7" PKG="pandas"
-  - PYPY="7.1.1" PY="3.6" PKG="pandas"
-  - PYPY="7.2.0" PY="2.7" PKG="pandas"
-  - PYPY="7.2.0" PY="3.6" PKG="pandas"
-  - PYPY="7.0.0" PY="2.7" PKG="xgboost"
-  - PYPY="7.0.0" PY="3.5" PKG="xgboost"
-  - PYPY="7.0.0" PY="3.6" PKG="xgboost"
-  - PYPY="7.1.1" PY="2.7" PKG="xgboost"
-  - PYPY="7.1.1" PY="3.6" PKG="xgboost"
-  - PYPY="7.2.0" PY="2.7" PKG="xgboost"
-  - PYPY="7.2.0" PY="3.6" PKG="xgboost"
-  - PYPY="7.1.1" PY="2.7" PKG="numpy==1.14.3"
-  - PYPY="7.1.1" PY="2.7" PKG="pandas==0.20.3"
-  - PYPY="7.1.1" PY="2.7" PKG="scipy==1.1.0"
-  - PYPY="7.1.1" PY="2.7" PKG="cython==0.28.2"
-
+  - PYPY="7.1.1" PY="2.7" PKG="psutil"
+  - PYPY="7.1.1" PY="3.6" PKG="psutil"
+  - PYPY="7.2.0" PY="2.7" PKG="psutil"
+  - PYPY="7.2.0" PY="3.6" PKG="psutil"
