this is needed to build cryptography

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,3 +7,6 @@ ENV REFRESHED_AT 2020-04-07
 # this to get a newer version of the library?
 # https://fedoraproject.org/wiki/EPEL
 RUN yum install -y openblas-devel
+
+# needed to build cryptography
+RUN yum install -y openssl-devel
