skip building psutil on pypy2.7-7.2.0: https://github.com/giampaolo/psutil/issues/1659

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,10 +57,13 @@ env:
   - PYPY="7.2.0" PY="3.6" PKG="cython"
   - PYPY="7.3.1" PY="2.7" PKG="cython"
   - PYPY="7.3.1" PY="3.6" PKG="cython"
-  - PYPY="7.2.0" PY="2.7" PKG="cryptography netifaces psutil gevent"
-  - PYPY="7.2.0" PY="3.6" PKG="cryptography netifaces psutil gevent"
-  - PYPY="7.3.1" PY="2.7" PKG="cryptography netifaces psutil gevent"
-  - PYPY="7.3.1" PY="3.6" PKG="cryptography netifaces psutil gevent"
+  - PYPY="7.2.0" PY="2.7" PKG="cryptography netifaces gevent"
+  - PYPY="7.2.0" PY="3.6" PKG="cryptography netifaces gevent"
+  - PYPY="7.3.1" PY="2.7" PKG="cryptography netifaces gevent"
+  - PYPY="7.3.1" PY="3.6" PKG="cryptography netifaces gevent"
+  - PYPY="7.2.0" PY="3.6" PKG="psutil"
+  - PYPY="7.3.1" PY="2.7" PKG="psutil"
+  - PYPY="7.3.1" PY="3.6" PKG="psutil"
   - PYPY="7.2.0" PY="2.7" PKG="pandas"
   - PYPY="7.2.0" PY="3.6" PKG="pandas"
   - PYPY="7.3.1" PY="2.7" PKG="pandas"
