remove some old packages which are no longer needed, and skip gevent on pypy3, as it doesn't seem to build

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,10 +57,16 @@ env:
   - PYPY="7.2.0" PY="3.6" PKG="cython"
   - PYPY="7.3.1" PY="2.7" PKG="cython"
   - PYPY="7.3.1" PY="3.6" PKG="cython"
-  - PYPY="7.2.0" PY="2.7" PKG="cryptography netifaces gevent"
-  - PYPY="7.2.0" PY="3.6" PKG="cryptography netifaces gevent"
-  - PYPY="7.3.1" PY="2.7" PKG="cryptography netifaces gevent"
-  - PYPY="7.3.1" PY="3.6" PKG="cryptography netifaces gevent"
+  - PYPY="7.2.0" PY="2.7" PKG="cryptography"
+  - PYPY="7.2.0" PY="3.6" PKG="cryptography"
+  - PYPY="7.3.1" PY="2.7" PKG="cryptography"
+  - PYPY="7.3.1" PY="3.6" PKG="cryptography"
+  - PYPY="7.2.0" PY="2.7" PKG="netifaces"
+  - PYPY="7.2.0" PY="3.6" PKG="netifaces"
+  - PYPY="7.3.1" PY="2.7" PKG="netifaces"
+  - PYPY="7.3.1" PY="3.6" PKG="netifaces"
+  - PYPY="7.2.0" PY="2.7" PKG="gevent"
+  - PYPY="7.3.1" PY="2.7" PKG="gevent"
   - PYPY="7.2.0" PY="3.6" PKG="psutil"
   - PYPY="7.3.1" PY="2.7" PKG="psutil"
   - PYPY="7.3.1" PY="3.6" PKG="psutil"
@@ -68,7 +74,3 @@ env:
   - PYPY="7.2.0" PY="3.6" PKG="pandas"
   - PYPY="7.3.1" PY="2.7" PKG="pandas"
   - PYPY="7.3.1" PY="3.6" PKG="pandas"
-  - PYPY="7.3.0" PY="2.7" PKG="numpy==1.14.3"
-  - PYPY="7.3.0" PY="2.7" PKG="pandas==0.20.3"
-  - PYPY="7.3.0" PY="2.7" PKG="scipy==1.1.0"
-  - PYPY="7.3.0" PY="2.7" PKG="cython==0.28.2"
